Updating how the fields get initialized